--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <main class="container">
         <div class="card card-panel center">
-            <h1>Discord Webhook Sender</h1>
+            <h1>Infinite/'s Discord Webhook Sender</h1>
         </div>
         <div class="card card-panel">
             <div class="input-field">
